[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
solana-client = "2.3.7"
solana-sdk = "3.0.0"
tokio = {version = "1.47.1", features = ["full"]}
solana-pubkey = "2.1.4"
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15.0"
